# E300_development

./: README.md
E300_BETA_FW/: md5sum.txt
Fam_Deploy/: stopMining.sh
Farm_Deploy/: changeVoltage.sh  ip_list.txt  readme.md  runAlephium.sh  runRadiant.sh  stopMining.sh
eth-miner/: instructions.md  md5sum.code.txt  startMiner.sh
firmware/: CMakeLists.txt
firmware/sample_unittest/: i2c_read_temp_unitest.c  iic_function.c  iic_lib.h  jtag_xvcserver.c
hardware/: .~lock.public_manual.docx#  constrain_e300_vu13p.xdc  constrain_e300_vu33p.xdc  constrain_e300_vu35p_civ.xdc  constrain_e300_vu9p.xdc  public_manual.docx
hardware/configurations/: constr_e300.xdc
toncoin/: sample_config.toml  toncoin.md
web-ui/: web_config.md
web-ui/cgi/: Makefile  qcmap_auth.c  qcmap_auth.cgi  qcmap_web_cgi  qcmap_web_cgi.c  qcmap_web_cgi.cgi
web-ui/cgi/.Xil/vivado_lab-11733-fae-riven/: Project1.lpr
web-ui/cgi/.Xil/vivado_lab-11733-fae-riven/backup/: hw_ila_data_1.ila
web-ui/cgi/.Xil/vivado_lab-11733-fae-riven/hw_1/wave/hw_ila_data_1/: hw_ila_data_1.wcfg  hw_ila_data_1.wdb
web-ui/cgi/.Xil/vivado_lab-11733-fae-riven/hw_ila_data_1/zip_work/: hw_ila_data_1.wcfg  probes.ltx  waveform.csv  waveform.dmp  waveform.vcd
web-ui/html/: box_ip_add  dashboard.html  index.html  index.lighttpd.html  ipsetting.html  login.html  minersetting.html  minersetting2.html  password.html  qcmap_auth.cgi  qcmap_session  qcmap_web_cgi.cgi  session_token.txt  startMiner.sh  stylemain.css  upfirmware.html
web-ui/html/js/: script.js
(+2 files in other folders)
